
              Recognize SIGPWR on systems that have it in messages
              about signal received.

              Build for big-endian machines: fix syntax error so it compiles.
              Broken in 10.63 (June 2013).

              Fix compile failure on system such as OpenBSD that don't have
              SIGWINCH and SIGIO.  Broken since 10.49 (December 2009).

13.09.28 BJH  Release 10.64.00

              pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
              (September 2009).

              libnetpbm, pnmpsnr, ppmcie on systems that don't use GNU C
              library: fix bogus printing of floating point numbers.

              test: fix ppmhist lack of sorting.

13.06.29 BJH  Release 10.63.00

              Add pamtowinicon, winicontopam.  Thanks Ludolf Holzheid
              (lholzheid@bihl-wiedemann.de).

              pgmnoise: add -maxval, speed up.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              Perl programs: make them shell programs that reinvoke themselves
              as perl so we can get the Perl interpreter from the PATH.

              yuvtoppm: check for inconsistencies between specified
              width and height and size of input.

              411toppm: check for inconsistencies between specified
              width and height and size of input.

              Ignore -plain when program generates PAM.  Before, programs
              failed if the user specified -plain to a program that generates
              a PAM image.

              giftopnm: fix bug: erroneously claims GIF ends prematurely.
              Broken in Netpbm 10.38 (March 2007).  This affects all GIFs, but
              the problem does not manifest when Netpbm was built with Gcc
              from 2007 and later.

              pnmtops: Fix bug: only first image gets converted.  Broken in
              Netpbm 10.56 (September 2011).

              pnmtopng: fix bug: incorrect output when output should have